# snow_extract

./: .env.template  .gitignore  README.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
config/: config_template.json  default_config.yaml
data/: .gitkeep
docs/: ITSM_WORKFLOWS.md  ITSM_WORKFLOW_DIAGRAM.md
examples/: basic_usage.py  itsm_use_cases.py
logs/: .gitkeep
output/: .gitkeep
scripts/: analyze_data_pipeline.py  debug_etl.py  demo_pipeline.py  generate_rca.py  real_data_extraction.py  servicenow_extraction.py  servicenow_extraction_improved.py  simple_servicenow_test.py  test_servicenow_api.py  test_ssl_connection.py
snow_analytics/: __init__.py
snow_analytics/analysis/: __init__.py  metrics.py  patterns.py  quality.py
snow_analytics/connectors/: __init__.py  api.py  exceptions.py
snow_analytics/core/: __init__.py  config.py  loaders.py  transform.py  validators.py
snow_analytics/privacy/: __init__.py  patterns.py  redaction.py
src/: __init__.py  config_manager.py  network_incident_etl.py  rca_generator.py  rca_report_formatter.py  redact5.py
tests/: test_loaders.py  test_rca_generator.py  test_transform.py
